--- a/src/main/resources/templates/new-employee.html
+++ b/src/main/resources/templates/new-employee.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="www.thymeleaf.org">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -8,9 +8,20 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+
 </head>
 <body>
+<div class="container">
+    <form action="/employees/save" th:object="${employee}"   method="POST">
+        <input type="text" placeholder="Employee First Name" th:field="${employee.firstName}" />
+
+        <input type="text" placeholder="Employee Last Name" th:field="${employee.lastName}" />
+
+        <input type="text" placeholder="Employee email" th:field="${employee.email}" />
+
+        <button type="submit">Create employee</button>
+    </form>
+</div>
 
 </body>
 </html>
