--- a/src/main/resources/templates/layouts.html
+++ b/src/main/resources/templates/layouts.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en" xmlns:th="www.thymeleaf.org">
-<head>
+<head th:fragment="header">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
