--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -1,16 +1,61 @@
 <!doctype html>
 <html lang="en" xmlns:th="www.thymeleaf.org">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+<head th:replace="layouts :: header">
 
 
 </head>
 <body>
 
+<nav th:replace="layouts :: navbar">
+</nav>
+
+<div>
+    <h4>
+
+        <table>
+            <thead>
+            <tr>
+                <th>Project Name</th>
+                <th>Project Stage</th>
+                <th>Project Description</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="aProject : ${projectsList}">
+                <td th:text="${aProject.name}"/>
+                <td th:text="${aProject.stage}" />
+                <td th:text="${aProject.description}" />
+
+            </tr>
+
+            </tbody>
+        </table>
+    </h4>
+</div>
+
+
+
+<div>
+    <h4>
+
+        <table>
+            <thead>
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>email</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="anEmployee : ${employeesList}">
+                <td th:text="${anEmployee.firstName}"/>
+                <td th:text="${anEmployee.lastName}" />
+                <td th:text="${anEmployee.email}" />
+            </tr>
+
+            </tbody>
+        </table>
+    </h4>
+</div>
 </body>
 </html>
