--- a/src/main/resources/templates/projects/new-project.html
+++ b/src/main/resources/templates/projects/new-project.html
@@ -1,16 +1,11 @@
 <!doctype html>
 <html lang="en" xmlns:th="www.thymeleaf.org">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
-
+<head th:replace="layouts :: header">
 </head>
+
 <body>
+<nav th:replace="layouts :: navbar">
+
 <div class="container">
     <form action="/projects/save" th:object="${project}"   method="POST">
         <input type="text" placeholder="Project Name" th:field="${project.name}" />
@@ -26,6 +21,6 @@
         <button type="submit">Create Project</button>
     </form>
 </div>
-
+</nav>
 </body>
 </html>
